--- a/Boostfolia/index.html
+++ b/Boostfolia/index.html
@@ -11,6 +11,7 @@
 	<title>1-site</title>
 	<link rel="stylesheet" type="text/css" media="all" href="scss/style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="js/script.js"></script>
 </head>
 </html>
 <body>
