--- a/Freebie/index.html
+++ b/Freebie/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="scss/style.css">
 	<link rel="stylesheet" href="scss/fonts.css">
 	<link rel="stylesheet" href="scss/responsive.css">
-	<script src="http://code.jquery.com/jquery-1.8.3.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="js/script.js"></script>
 </head>
 <body>
