--- a/Krovlia/index.html
+++ b/Krovlia/index.html
@@ -25,6 +25,11 @@
 					<p>+38 (067) <span>518 90 09</span></p>
 				</div>
 				<div class="nav-menu">
+					<div class="nav-toggle">
+						<div class="nt_cont">
+							<a href="">Меню</a><div class="h-icon"></div>
+						</div>
+					</div>
 					<nav>
 						<ul>
 							<li><a href="#">Кровельные материалы</a></li>
@@ -137,6 +142,7 @@
 						</div>
 					</div>
 					<div class="b5-price">
+						<span class="triangle">▼</span>
 						<p>Металлочерепица</p>
 						<p><span>от 86,98 грн/м2</span></p>	
 					</div>
@@ -150,6 +156,7 @@
 						</div>
 					</div>
 					<div class="b5-price">
+						<span class="triangle">▼</span>
 						<p>Профнастил</p>
 						<p><span>от 56,98 грн/м2</span></p>	
 					</div>
@@ -163,6 +170,7 @@
 						</div>
 					</div>
 					<div class="b5-price">
+						<span class="triangle">▼</span>
 						<p>Водосточные системы</p>
 						<p><span>от 50 грн/м2</span></p>	
 					</div>
@@ -176,6 +184,7 @@
 						</div>
 					</div>
 					<div class="b5-price">
+						<span class="triangle">▼</span>
 						<p>Утеплители</p>
 						<p><span>от 14,59 грн/м2</span></p>	
 					</div>
@@ -189,6 +198,7 @@
 						</div>
 					</div>
 					<div class="b5-price">
+						<span class="triangle">▼</span>
 						<p>Сайдинг</p>
 						<p><span>от 159,98 грн/м2</span></p>	
 					</div>
@@ -202,6 +212,7 @@
 						</div>
 					</div>
 					<div class="b5-price">
+						<span class="triangle">▼</span>
 						<p>Кровельные пленки</p>
 						<p><span>от 8,95 грн/м2</span></p>	
 					</div>
@@ -215,6 +226,7 @@
 						</div>
 					</div>
 					<div class="b5-price">
+						<span class="triangle">▼</span>
 						<p>Пиломатериалы</p>
 						<p><span>от 2090,59 грн/м2</span></p>	
 					</div>
@@ -228,6 +240,8 @@
 						</div>
 					</div>
 					<div class="b5-price">
+						<span class="triangle">▼</span>
+						<span class="triangle">▼</span>
 						<p>Металические планки</p>
 						<p><span>от 8 грн/м2</span></p>	
 					</div>
@@ -365,5 +379,63 @@
 			</div>
 		</div>
 	</section>
+	<section class="block10">
+		<div class="block10_cont">
+			<h2>Кровля в Одессе</h2>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam nec dui. Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna. Aenean velit odio, elementum in tempus ut, vehicula eu diam. Pellentesque rhoncus aliquam mattis. Ut vulputate eros sed felis sodales nec vulputate justo hendrerit. Vivamus varius pretium ligula, a aliquam odio euismod sit amet. Quisque laoreet sem sit amet orci ullamcorper at ultricies metus viverra. Pellentesque arcu mauris, malesuada quis ornare accumsan, blandit sed diam.
+			</p>
+			<a href="">Читать дальше</a><span><img src="scss/images/down-arr.png" alt=""></span>
+		</div>
+	</section>
+	<section class="block11">
+		<div class="block11_cont clearfix">
+			<div class="map"></div>
+			<div class="cont-form">
+				<form action="">
+					<h2>Остались вопросы?</h2>
+					<p>Заполните форму ниже и наши <br> менеджеры свяжутся с Вами!</p>
+					<div class="input">
+						<input type="text">
+						<label for="text">Ваше имя<span style="color: red">*</span></label>
+					</div>
+					<div class="input">
+						<input type="text">
+						<label for="text">Ваш телефон<span style="color: red">*</span></label>
+					</div>
+					<div class="input">
+						<input type="text">
+						<label for="text">Ваш e-mail<span style="color: red">*</span></label>
+					</div>
+					<button>Отправить</button>
+				</form>
+			</div>
+		</div>
+	</section>
+	<footer>
+		<div class="footer_cont">
+			<div class="f_blocks">
+				<div class="f_block f_block_1">
+					<p>Звоните прямо сейчас</p>
+					<span>+38 (048) 965 32 45</span>
+					<span>+38 (048) 965 32 45</span>
+					<span>+38 (099) 256 75 32</span>
+					<span>+38 (099) 256 75 32</span>
+				</div>
+				<div class="f_block f_block_2">
+					<img src="scss/images/f_logo.png" alt="">
+				</div>
+				<div class="f_block f_block_3">
+					<p>© 2016 Кровля профи. </p>
+					<p>Все права защищены.</p>
+					<p>Сайт разработан: AVADA-MEDIA</p>
+				</div>
+			</div>
+		</div>
+	</footer>
+	<img class="up-arr" src="scss/images/up-arr.png" alt="">
+	<div class="fixed-cf">
+		<a href="">Обратная связь</a>
+	</div>
 </body>
 </html>
