--- a/tests/index.html
+++ b/tests/index.html
@@ -196,92 +196,97 @@
 		<div class="question_w_1 question_w">
 			<h2>Вопрос_1</h2>
 			<ul>
-				<li>Ответ_1</li>
-				<li>Ответ_2</li>
-				<li>Ответ_3</li>
-				<li>Ответ_4</li>
+				<li class="answer_1 answer" data-value="a">Ответ_1</li>
+				<li class="answer_2 answer" data-value="b">Ответ_2</li>
+				<li class="answer_3 answer" data-value="c">Ответ_3</li>
+				<li class="answer_4 answer" data-value="d">Ответ_4</li>
 			</ul>
 		</div>
 		<div class="question_w_2 question_w">
 			<h2>Вопрос_2</h2>
 			<ul>
-				<li>Ответ_1</li>
-				<li>Ответ_2</li>
-				<li>Ответ_3</li>
-				<li>Ответ_4</li>
+				<li class="answer_1 answer" data-value="a">Ответ_1</li>
+				<li class="answer_2 answer" data-value="b">Ответ_2</li>
+				<li class="answer_3 answer" data-value="c">Ответ_3</li>
+				<li class="answer_4 answer" data-value="d">Ответ_4</li>
 			</ul>
 		</div>
 		<div class="question_w_3 question_w">
 			<h2>Вопрос_3</h2>
 			<ul>
-				<li>Ответ_1</li>
-				<li>Ответ_2</li>
-				<li>Ответ_3</li>
-				<li>Ответ_4</li>
+				<li class="answer_1 answer" data-value="a">Ответ_1</li>
+				<li class="answer_2 answer" data-value="b">Ответ_2</li>
+				<li class="answer_3 answer" data-value="c">Ответ_3</li>
+				<li class="answer_4 answer" data-value="d">Ответ_4</li>
 			</ul>
 		</div>
 		<div class="question_w_4 question_w">
 			<h2>Вопрос_4</h2>
 			<ul>
-				<li>Ответ_1</li>
-				<li>Ответ_2</li>
-				<li>Ответ_3</li>
-				<li>Ответ_4</li>
+				<li class="answer_1 answer" data-value="a">Ответ_1</li>
+				<li class="answer_2 answer" data-value="b">Ответ_2</li>
+				<li class="answer_3 answer" data-value="c">Ответ_3</li>
+				<li class="answer_4 answer" data-value="d">Ответ_4</li>
 			</ul>
 		</div>
 		<div class="question_w_5 question_w">
 			<h2>Вопрос_5</h2>
 			<ul>
-				<li>Ответ_1</li>
-				<li>Ответ_2</li>
-				<li>Ответ_3</li>
-				<li>Ответ_4</li>
+				<li class="answer_1 answer" data-value="a">Ответ_1</li>
+				<li class="answer_2 answer" data-value="b">Ответ_2</li>
+				<li class="answer_3 answer" data-value="c">Ответ_3</li>
+				<li class="answer_4 answer" data-value="d">Ответ_4</li>
 			</ul>
 		</div>
 		<div class="question_w_6 question_w">
 			<h2>Вопрос_6</h2>
 			<ul>
-				<li>Ответ_1</li>
-				<li>Ответ_2</li>
-				<li>Ответ_3</li>
-				<li>Ответ_4</li>
+				<li class="answer_1 answer" data-value="a">Ответ_1</li>
+				<li class="answer_2 answer" data-value="b">Ответ_2</li>
+				<li class="answer_3 answer" data-value="c">Ответ_3</li>
+				<li class="answer_4 answer" data-value="d">Ответ_4</li>
 			</ul>
 		</div>
 		<div class="question_w_7 question_w">
 			<h2>Вопрос_7</h2>
 			<ul>
-				<li>Ответ_1</li>
-				<li>Ответ_2</li>
-				<li>Ответ_3</li>
-				<li>Ответ_4</li>
+				<li class="answer_1 answer" data-value="a">Ответ_1</li>
+				<li class="answer_2 answer" data-value="b">Ответ_2</li>
+				<li class="answer_3 answer" data-value="c">Ответ_3</li>
+				<li class="answer_4 answer" data-value="d">Ответ_4</li>
 			</ul>
 		</div>
 		<div class="question_w_8 question_w">
 			<h2>Вопрос_8</h2>
 			<ul>
-				<li>Ответ_1</li>
-				<li>Ответ_2</li>
-				<li>Ответ_3</li>
-				<li>Ответ_4</li>
+				<li class="answer_1 answer" data-value="a">Ответ_1</li>
+				<li class="answer_2 answer" data-value="b">Ответ_2</li>
+				<li class="answer_3 answer" data-value="c">Ответ_3</li>
+				<li class="answer_4 answer" data-value="d">Ответ_4</li>
 			</ul>
 		</div>
 		<div class="question_w_9 question_w">
 			<h2>Вопрос_9</h2>
 			<ul>
-				<li>Ответ_1</li>
-				<li>Ответ_2</li>
-				<li>Ответ_3</li>
-				<li>Ответ_4</li>
+				<li class="answer_1 answer" data-value="a">Ответ_1</li>
+				<li class="answer_2 answer" data-value="b">Ответ_2</li>
+				<li class="answer_3 answer" data-value="c">Ответ_3</li>
+				<li class="answer_4 answer" data-value="d">Ответ_4</li>
 			</ul>
 		</div>
 		<div class="question_w_10 question_w">
 			<h2>Вопрос_10</h2>
 			<ul>
-				<li>Ответ_1</li>
-				<li>Ответ_2</li>
-				<li>Ответ_3</li>
-				<li>Ответ_4</li>
+				<li class="answer_1 answer" data-value="a">Ответ_1</li>
+				<li class="answer_2 answer" data-value="b">Ответ_2</li>
+				<li class="answer_3 answer" data-value="c">Ответ_3</li>
+				<li class="answer_4 answer" data-value="d">Ответ_4</li>
 			</ul>
+		</div>
+		<div class="answer_cont question_w">
+			<h2>Вы успешно прошли тест. Введите пожалуйста ваш email, чтоб мы отправили ваши результаты</h2>
+			<input type="text" placeholder="Введите email">
+			<input type="submit" value="Send">
 		</div>
 	</section>
 </body>
