--- a/veza/index.html
+++ b/veza/index.html
@@ -96,27 +96,27 @@
 				<div class="ps_title clearfix">
 					<h3>Выбрать типоразмер</h3>
 					<div class="right_size">
-						<a class='rs_active' href="">CX1</a>
-						<a href="">CX5</a>
+						<a class='rs_active cxcx1'>CX1</a>
+						<a class='cxcx5'>CX5</a>
 					</div>
 				</div>
 				<div class="main_sizes">
-					<a href="">025</a>
-					<a href="">028</a>
-					<a href="">031</a>
-					<a href="">034</a>
-					<a href="">040</a>
-					<a href="">045</a>
-					<a href="">050</a>
-					<a href="">056</a>
-					<a class='available' href="">063</a>
-					<a href="">071</a>
-					<a class='available' href="">080</a>
-					<a href="">090</a>
-					<a class='available' href="">100</a>
-					<a href="">112</a>
-					<a class='available' href="">125</a>
-					<a href="">140</a>
+					<a class="cx-5" href="">025</a>
+					<a class="cx-5" href="">028</a>
+					<a class="cx-5" href="">031</a>
+					<a class="cx-5" href="">034</a>
+					<a class="cx-5" href="">040</a>
+					<a class="cx-5" href="">045</a>
+					<a class="cx-5" href="">050</a>
+					<a class="cx-5" href="">056</a>
+					<a class="cx-5" class='available cx1' href="">063</a>
+					<a class="cx-5" href="">071</a>
+					<a class='available cx1' href="">080</a>
+					<a class="cx-5" href="">090</a>
+					<a class='available cx1' href="">100</a>
+					<a class="cx-5" href="">112</a>
+					<a class='available cx1' href="">125</a>
+					<a class="cx-5" href="">140</a>
 				</div>
 			</div>
 			<div class="prod_tabs">
