--- a/veza/index.html
+++ b/veza/index.html
@@ -67,9 +67,26 @@
 						  <li><img class='demo-1' src="scss/images/prod1.jpg" /></li>
 						</ul>
 						<div id="bx-pager">
-						  <a data-slide-index="0" href=""><img src="scss/images/thumb1.jpg" /></a>
-						  <a data-slide-index="1" href=""><img src="scss/images/thumb1.jpg" /></a>
-						  <a data-slide-index="2" href=""><img src="scss/images/thumb1.jpg" /></a>
+							<div class="slider2">
+								<div class="slide">
+									<a data-slide-index="0" href=""><img src="scss/images/thumb1.jpg" /></a>
+								</div>
+								<div class="slide">
+									<a data-slide-index="1" href=""><img src="scss/images/thumb1.jpg" /></a>
+								</div>
+								<div class="slide">
+									 <a data-slide-index="2" href=""><img src="scss/images/thumb1.jpg" /></a>
+								</div>
+								<div class="slide">
+									<a data-slide-index="0" href=""><img src="scss/images/thumb1.jpg" /></a>
+								</div>
+								<div class="slide">
+									<a data-slide-index="1" href=""><img src="scss/images/thumb1.jpg" /></a>
+								</div>
+								<div class="slide">
+									 <a data-slide-index="2" href=""><img src="scss/images/thumb1.jpg" /></a>
+								</div>
+							</div>
 						</div>
 					</div>
 					<div class="info info1 info_active">
