--- a/veza/index.html
+++ b/veza/index.html
@@ -9,10 +9,15 @@
 	<link rel="stylesheet" href="scss/style.css">
 	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
 	<link rel="stylesheet" href="lib/jquery.bxslider.min.css">
+	<link rel="stylesheet" href="js/jquery.fancybox-1.3.4.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="http://code.jquery.com/jquery-1.8.3.js"></script>
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
 	<script src="js/script.js"></script>
 	<script src='lib/jquery.bxslider.min.js'></script>
+	<script src='js/jquery.mousewheel-3.0.4.pack.js'></script>
+	<script src='js/jquery.fancybox-1.3.4.pack.js'></script>
+	<script src='js/jquery.easing-1.3.pack.js'></script>
 </head>
 <body>
 	<header class="clearfix">
@@ -62,9 +67,9 @@
 				<div class="info_cont clearfix">
 					<div class="prod_photos">
 						<ul class="bxslider">
-						  <li><img src="scss/images/prod1.jpg" /></li>
-						  <li><img class='demo-3' src="scss/images/prod2.jpg" /></li>
-						  <li><img class='demo-1' src="scss/images/prod1.jpg" /></li>
+						  <li><a class="iframe" href="scss/images/prod1.jpg"><img src="scss/images/prod1.jpg" /></a></li>
+						  <li><a class="iframe" href="scss/images/prod2.jpg"><img class='demo-3' src="scss/images/prod2.jpg" /></a></li>
+						  <li><a class="iframe" href="scss/images/prod1.jpg"><img class='demo-1' src="scss/images/prod1.jpg" /></a></li>
 						</ul>
 						<div id="bx-pager">
 							<div class="slider2">
