--- a/veza/index.html
+++ b/veza/index.html
@@ -10,7 +10,8 @@
 	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
 	<link rel="stylesheet" href="lib/jquery.bxslider.min.css">
 	<link rel="stylesheet" href="js/jquery.fancybox-1.3.4.css">
-	<script src="http://code.jquery.com/jquery-1.8.3.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="https://code.jquery.com/jquery-1.8.3.js"></script>
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
 	<script src="js/script.js"></script>
 	<script src='lib/jquery.bxslider.min.js'></script>
