--- a/irina_larina/index.html
+++ b/irina_larina/index.html
@@ -28,6 +28,7 @@
 				</div>
 			</form>
 		</div>
+		<img class='light' src="scss/images/light.png" alt="">
 		<img class='body1' src="scss/images/body1.png" alt="">
 		<img class='cloud' src="scss/images/cloud.png" alt="">
 	</section>
