--- a/irina_larina/index.html
+++ b/irina_larina/index.html
@@ -424,8 +424,8 @@
 				</div>
 				<h2>Ирина Войновская</h2>
 				<p>Неделя удовольствий с Ириной Лариной давно прошла, а радость от нее осталась. Я в прямом смысле вскочила в этот проект и понеслось. Это был МЕГА КРУТОЙ девичник с поддержкой от каждой участницы. </p>
-				<p class='plast'>Я не знаю как Ирина Ларина создала такое душевное пространство, что даже мой сарказм сменился на милость. Были не сложные, но какие же действенные упражнения...</p>
-				<a href="">Читать полностью >></a>
+				<p class='plast'>Я не знаю как Ирина Ларина создала такое душевное пространство, что даже мой сарказм сменился на милость. Были не сложные, но какие же действенные упражнения.<span class='more-sign'>...</span><span class='all-text'>Я теперь ложусь и просыпаюсь с обезьянкой (упражнение, которое поднимает настроение) и продолжаю радовать себя каждый день. А еще, в конце проекта я выиграла коуч сессию на 3 месяца! Представляете? Чему очень благодарна! </span></p>
+				<a class='read-more'>Читать полностью >></a>
 			</div>
 			<div class="comment comment-2">
 				<div class="avatar">
@@ -437,8 +437,8 @@
 с Ириной Лариной - это сплошное удовольствие! </p>
 				<p>За неделю я создала столько приятностей для себя и близких, сколько никогда раньше бы себе не позволила.</p>
 				<p>Теперь я в первую очередь, планируя следующую неделю, вношу в список, чем могу порадовать себя. Ирина, благодарю! Все твои программы 
-и коучинг всегда очень ...</p>
-				<a href="">Читать полностью >></a>
+и коучинг всегда очень <span class='more-sign'>...</span><span class='all-text'>вовремя для меня. </span></p>
+				<a class='read-more'>Читать полностью >></a>
 			</div>
 			<div class="comment comment-3">
 				<div class="avatar">
@@ -447,8 +447,9 @@
 				</div>
 				<h2>Мария Базарова</h2>
 				<p>Ирина, спасибо большое за твою позитивную энергетику; за мотивационный пинок; за то, что ты придумала прекрасную возможность для девушек вспомнить о том, что мы девочки и мы просто обязаны помогать себе получать радость от жизни!</p>
-				<p>Лично я максимально стараюсь себя баловать, и чисто интуитивно решила поучаствовать в неделе удовольствий. Получила массу удовольствия и узнала новые...</p>
-				<a href="">Читать полностью >></a>
+				<p>Лично я максимально стараюсь себя баловать, и чисто интуитивно решила поучаствовать в неделе удовольствий. Получила массу удовольствия и узнала новые<span class='more-sign'>...</span> <span class='all-text'>методы того, как можно себя порадовать еще. На протяжении всей недели постоянно получала обратную связь и чувствовала поддержку участниц. Короче, это было КРУТО!
+Спасибо!!!</span></p>
+				<a class='read-more'>Читать полностью >></a>
 			</div>
 			<div class="comment comment-4">
 				<div class="avatar">
@@ -457,9 +458,15 @@
 				</div>
 				<h2>Ирина Белякова</h2>
 				<p>Хотите ярких впечатлений? 
-Добрый день, дорогой читатель, хочу поделиться секретом о том, как каждый из вас легко может наполнить свою жизнь запоминающимися минутами! Я вас хорошо понимаю: работа, дети, домашние дела. Беготня по кругу. Совсем мало времени остается на себя. Кризис, экономия, стресс…</p>
-				<p class='plast'>Удивительные открытия произошли со мной на «Недели удовольствий»...</p>
-				<a href="">Читать полностью >></a>
+Добрый день, дорогой читатель, хочу поделиться секретом о том, как каждый из вас легко может наполнить свою жизнь запоминающимися минутами! Я вас хорошо понимаю: работа, дети, домашние дела. Беготня по кругу. Совсем мало времени остается на себя. Кризис, экономия, стресс.</p>
+				<p class='plast'>Удивительные открытия произошли со мной на «Недели удовольствий»<span class='more-sign'>...</span><span class='all-text'>Удивительные открытия произошли со мной на «Недели удовольствий» с Ириной Лариной. Это осенило меня как вспышка: все удовольствия рядом с нами. Нужно лишь вспомнить, что общение с детьми приносит радость, успехи на работе - удовлетворение, вкусный ужин в кругу семьи – удовольствие.
+Помните, как кружка с ароматным кофе согревает руку, холодной зимой, а пушистый плед щекочет подбородок. Как любимый питомец весело резвится с вашими тапочками. Каждый наш день наполнен маленькими радостями и удовольствиями!
+Спасибо Ирине Лариной!
+Она напомнила, что живем мы сейчас, а не завтра и не вчера! Я скептически отношусь к подобным мероприятиям. Выставлять свои чувства и желания на показ - не про меня! Еще мне казалось, что если я соглашусь на этот проект, то придется перекраивать свой бюджет, что то обязательно делать.
+НО! На самом беле неделя пролетела на одном дыхании. Бюджет мой не пострадал, а я получила массу приятных впечатлений! Было легко и весело.
+Я познакомилась с интересными девушками, с которыми поддерживаю хорошие отношения. Если будет повторение, обязательно пойду и вам рекомендую для поднятия жизненного тонуса и обретения новых подруг.
+</span></p>
+				<a class='read-more'>Читать полностью >></a>
 			</div>
 		</div>
 		<div class="play-5">
