--- a/irina_larina/index.html
+++ b/irina_larina/index.html
@@ -534,7 +534,7 @@ c Ириной Лариной.</p>
 			<p>Ведь согласись, что счастливая женщина - она как добрая фея, у которой есть достаточно волшебного зелья, чтобы легко получать желаемое для себя, родных, любимых или знакомых! Да и вообще, для всех людей в целом!</p>
 			<div class="play-6">
 				<img class='left-b' src="scss/images/left-b.png" alt="">
-				<input type="submit" value='Стать счастливым'>
+				<input type="submit" value='Стать счастливой'>
 				<img class='right-b' src="scss/images/right-b.png" alt="">
 			</div>
 		</div>
