--- a/crypto/index.html
+++ b/crypto/index.html
@@ -37,6 +37,7 @@
 			<div class="header_bott">
 				<nav>
 					<ul>
+						<li class="toggle"><a>Меню</a><img class='hamb' src="scss/images/hamb.png" alt=""></li>
 						<li><a href="">Главная</a></li>
 						<li><a href="">Инвесторам</a></li>
 						<li><a href="">О нас</a></li>
@@ -234,10 +235,32 @@
 		</div>
 	</section>
 	<section class="b-4">
-		<img src="scss/images/icon-1.jpg" alt="">
-		<img src="scss/images/icon-2.jpg" alt="">
-		<img src="scss/images/icon-3.jpg" alt="">
-		<img src="scss/images/icon-4.jpg" alt="">
+		<div class="slider1">
+			<div class="slide">
+				<img src="scss/images/icon-1.jpg" alt="">
+			</div>
+			<div class="slide">
+				<img src="scss/images/icon-2.jpg" alt="">
+			</div>
+			<div class="slide">
+				<img src="scss/images/icon-3.jpg" alt="">
+			</div>
+			<div class="slide">
+				<img src="scss/images/icon-4.jpg" alt="">
+			</div>
+			<div class="slide">
+				<img src="scss/images/icon-1.jpg" alt="">
+			</div>
+			<div class="slide">
+				<img src="scss/images/icon-2.jpg" alt="">
+			</div>
+			<div class="slide">
+				<img src="scss/images/icon-3.jpg" alt="">
+			</div>
+			<div class="slide">
+				<img src="scss/images/icon-4.jpg" alt="">
+			</div>	
+		</div>
 	</section>
 	<section class="b-5">
 		<h2>Прирост вашего депозита:</h2>
