--- a/crypto/index.html
+++ b/crypto/index.html
@@ -38,11 +38,11 @@
 				<nav>
 					<ul>
 						<li class="toggle"><a>Меню</a><img class='hamb' src="scss/images/hamb.png" alt=""></li>
-						<li><a href="">Главная</a></li>
+						<li><a href="index.html">Главная</a></li>
 						<li><a href="">Инвесторам</a></li>
 						<li><a href="">О нас</a></li>
 						<li><a href="">Калькулятор</a></li>
-						<li><a href="">Партнерам</a></li>
+						<li><a href="partners.html">Партнерам</a></li>
 						<li><a href="">Новости</a></li>
 						<li><a href="">FAQ</a></li>
 						<li><a href="">Контакты</a></li>
