--- a/crypto/index.html
+++ b/crypto/index.html
@@ -39,12 +39,12 @@
 					<ul>
 						<li class="toggle"><a>Меню</a><img class='hamb' src="scss/images/hamb.png" alt=""></li>
 						<li><a href="index.html">Главная</a></li>
-						<li><a href="">Инвесторам</a></li>
-						<li><a href="">О нас</a></li>
-						<li><a href="">Калькулятор</a></li>
+						<li><a href="investors.html">Инвесторам</a></li>
+						<li><a href="about_us.html">О нас</a></li>
+						<li><a href="calculator.html">Калькулятор</a></li>
 						<li><a href="partners.html">Партнерам</a></li>
 						<li><a href="">Новости</a></li>
-						<li><a href="">FAQ</a></li>
+						<li><a href="faq.html">FAQ</a></li>
 						<li><a href="">Контакты</a></li>
 					</ul>
 				</nav>
@@ -264,6 +264,50 @@
 	</section>
 	<section class="b-5">
 		<h2>Прирост вашего депозита:</h2>
+	</section>
+	<section class="b-5-1">
+		<div class="slider2">
+			<div class="slide">
+				<h2>Стандарт +49%</h2>
+				<p>за 8 месяцев</p>
+			</div>
+			<div class="slide">
+				<h2>Стандарт +49%</h2>
+				<p>за 8 месяцев</p>
+			</div>
+			<div class="slide">
+				<h2>Стандарт +49%</h2>
+				<p>за 8 месяцев</p>
+			</div>
+			<div class="slide">
+				<h2>Стандарт +49%</h2>
+				<p>за 8 месяцев</p>
+			</div>
+			<div class="slide">
+				<h2>Стандарт +49%</h2>
+				<p>за 8 месяцев</p>
+			</div>
+			<div class="slide">
+				<h2>Стандарт +49%</h2>
+				<p>за 8 месяцев</p>
+			</div>
+			<div class="slide">
+				<h2>Стандарт +49%</h2>
+				<p>за 8 месяцев</p>
+			</div>
+			<div class="slide">
+				<h2>Стандарт +49%</h2>
+				<p>за 8 месяцев</p>
+			</div>
+			<div class="slide">
+				<h2>Стандарт +49%</h2>
+				<p>за 8 месяцев</p>
+			</div>
+			<div class="slide">
+				<h2>Стандарт +49%</h2>
+				<p>за 8 месяцев</p>
+			</div>
+		</div>
 	</section>
 	<section class="b-6">
 		<div class="b6_cont">
