--- a/crypto/partners.html
+++ b/crypto/partners.html
@@ -39,12 +39,12 @@
 					<ul>
 						<li class="toggle"><a>Меню</a><img class='hamb' src="scss/images/hamb.png" alt=""></li>
 						<li><a href="index.html">Главная</a></li>
-						<li><a href="">Инвесторам</a></li>
-						<li><a href="">О нас</a></li>
-						<li><a href="">Калькулятор</a></li>
+						<li><a href="investors.html">Инвесторам</a></li>
+						<li><a href="about_us.html">О нас</a></li>
+						<li><a href="calculator.html">Калькулятор</a></li>
 						<li><a href="partners.html">Партнерам</a></li>
 						<li><a href="">Новости</a></li>
-						<li><a href="">FAQ</a></li>
+						<li><a href="faq.html">FAQ</a></li>
 						<li><a href="">Контакты</a></li>
 					</ul>
 				</nav>
@@ -60,7 +60,7 @@
 		<p>Для наших партнеров и желающих таковыми стать, мы в нашем проекте разработали многоуровневую партнёрскую программу, которая учитывает интересы уже существующих партнёров, и с большой долей вероятности — станет идеальными условиями для сотрудничества с новыми партнёрами. Наша партнёрская программа представляет собой трех уровневую реферальную систему — для начинающих партнёров, и многоуровневую — для Лидеров, с фиксированным процентом прибыли от всего своего древа. В целом — система достаточно проста и понятна. Но все же имеет некоторые моменты, которые мы постараемся объяснить на наглядном примере.</p>
 		<div class="p-img-cont">
 			<img src="scss/images/p-1.jpg" alt="">
-			<img src="scss/images/p-2.jpg" alt="">
+			<img src="scss/images/p-1.jpg" alt="">
 		</div>
 		<div class="p-text-left">
 			<p>Партнёрская программа для начинающих состоит из трех уровневой реферальной системы, где вы получаете комиссию от привлеченных средств вашими рефералами, в зависимости от вашего статуса. Если вы только начали сотрудничество с нами, и оборот вашей структуры от 100$ до 2999$ — то ваша процентная ставка 5\2. Где вы получаете комиссию 5% от депозита привлеченных Вами рефералов (первого уровня), и 2% от депозитов ваших рефералов (второго уровня).</p>
@@ -73,7 +73,7 @@
 		<p>
 		Как только Вы сделаете оборот свыше 30.000 $ и до 99.999 $ — мы Вас переводим на процентную ставку для Лидеров 1 (первого уровня) 7/2/1 + 2% от депозитов со всего своего древа. Где вы получаете комиссию 7% от депозита привлеченных Вами рефералов (первого уровня), 2% от депозитов ваших рефералов (второго уровня), и 1% от депозитов ваших рефералов третьего уровня. А так же дополнительно 2% от депозитов всех рефералов вашего древа (В любую глубину).</p>
 		<div class="p-lider-img">
-			<img src="scss/images/lider1.png" alt="">
+			<img src="scss/images/lider1.jpg" alt="">
 		</div>
 		<h2>ЛИДЕР-2</h2>
 		<p>
@@ -107,6 +107,11 @@
 		</p>
 		<div class="p-lider-img">
 			<img src="scss/images/lider4.jpg" alt="">
+		</div>
+		<h2>4. Правило 70\30 для ЛИДЕРОВ 3</h2>
+		<p>Правило 70/30 так же работает на лидерскую дополнительную комиссию в 10% от прибыли депозитов структуры. Если между вами и рефералом (с которого прибыли вы получаете комиссию) есть лидер так же третьего уровня, то 10% гонорар будет так же делиться по вышеописанному правилу 70\30.</p>
+		<div class="p-lider-img">
+			<img src="scss/images/lider5.jpg" alt="">
 		</div>
 		<p>Но оно работает лишь при условии, что под Вами будет конкурирующий лидер третьего уровня. Если между Вами и рефералом (с которого прибыли вы получаете комиссию) больше никого нет — то вы получите весь гонорар целиком. Данное правило вступает в силу лишь тогда, когда есть конкурентноспособный лидер. Если Вы лидер третьего уровня, а под вами есть лидер второго уровня — то данное правило на дополнительную комиссию не включается. Так как лидер второго уровня не конкурирует с Вами на этот гонорар в 10% прибыли с депозитов вашего древа…</p>
 		<h2>5. Все проще чем показалось.</h2>
