--- a/crypto/partners.html
+++ b/crypto/partners.html
@@ -6,17 +6,17 @@
 	<meta name="description" content="" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" href="scss/style.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script src="js/script.js"></script>
-	<script src="js/jquery.bxslider.min.js"></script>
+	<link rel="stylesheet" href="scss/style.min.css">
+	<script async src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script async src="js/script.js"></script>
+	<script async src="js/jquery.bxslider.min.js"></script>
 	<link href="lib/jquery.bxslider.css" rel="stylesheet" />
 </head>
 <body>
 	<header>
 		<div class="header_cont clearfix">
 			<div class="logo">
-				<img src="scss/images/h_logo.png" alt="">
+				<a href="index.html"><img src="scss/images/h_logo.png" alt=""></a>
 			</div>
 			<div class="header_top">
 				<div class="phone">
@@ -86,11 +86,6 @@
 			<img src="scss/images/lider2.jpg" alt="">
 		</div>
 		<h3>Безопасность</h3>
-		<div class="border-img">
-			<div class="border-left"></div>
-			<img class='lion' src="scss/images/lion.png" alt="">
-			<div class="border-right"></div>
-		</div>
 		<p>Система финансовой гигиены, для порядочности и длительного взаимного сотрудничества. В разработке нашей партнерской программы, мы учитывали многолетний наш опыт, и опыт наших партнеров. И на выходе получили достаточно безопасный финансовый алгоритм, который позволил нашей партнёрской программе быть вполне устойчивой. И гарантировать стабильное и интересное взаимное сотрудничество с нашими партнёрами.</p>
 		<p>Так исторически сложилось, что наш проект работает по-настоящему, и деньги мы действительно зарабатываем от увеличения масштабов ювелирной фабрики. С воздуха их не получаем, поэтому в партнёрскую программу нам пришлось ввести некоторые ограничения для Лидеров. А именно:</p>
 		<h2>1. Запрет мультиаккаунтов</h2>
