--- a/crypto/faq.html
+++ b/crypto/faq.html
@@ -6,17 +6,17 @@
 	<meta name="description" content="" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" href="scss/style.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script src="js/script.js"></script>
-	<script src="js/jquery.bxslider.min.js"></script>
+	<link rel="stylesheet" href="scss/style.min.css">
+	<script async src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script async src="js/script.js"></script>
+	<script async src="js/jquery.bxslider.min.js"></script>
 	<link href="lib/jquery.bxslider.css" rel="stylesheet" />
 </head>
 <body>
 	<header>
 		<div class="header_cont clearfix">
 			<div class="logo">
-				<img src="scss/images/h_logo.png" alt="">
+				<a href="index.html"><img src="scss/images/h_logo.png" alt=""></a>
 			</div>
 			<div class="header_top">
 				<div class="phone">
