--- a/crypto/news.html
+++ b/crypto/news.html
@@ -53,24 +53,8 @@
 			</div>
 		</div>
 	</header>
-	<section class="banner-1 banner-6">
-		<h2>О компании Aurum-Capital</h2>
-	</section>
-	<section class="cont_page">
-		<div class="cp_left">
-			<h2>Контакты:</h2>
-			<h4>Номера телефона:</h4>
-			<p>+3 (044) — 123 — 45 — 67</p>
-			<p>+3 (044) — 123 — 45 — 67</p>
-			<p>+3 (044) — 123 — 45 — 67</p>
-			<h4 class='h4_email'>Email:</h4>
-			<p>aurum-capital.biz@gmail.com</p>
-		</div>
-		<div class="cp_right">
-			<img src="scss/images/qr.jpg" alt="">
-		</div>
-		<h4>Мы на Google Maps</h4>
-		<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d20332.61562317521!2d30.4259589!3d50.4303532!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1suk!2sua!4v1484436079090" width="100%" height="500" frameborder="0" style="border:0" allowfullscreen=""></iframe>
+	<section class="banner-1 banner-7">
+		<h2>Новости</h2>
 	</section>
 	<footer>
 		<div class="f_cont">
