--- a/crypto/index.html
+++ b/crypto/index.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" href="scss/style.min.css">
-	<script async src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script async src="js/script.js"></script>
 	<script async src="js/jquery.bxslider.min.js"></script>
 	<link href="lib/jquery.bxslider.css" rel="stylesheet" />
@@ -43,9 +43,9 @@
 						<li><a href="about_us.html">О нас</a></li>
 						<li><a href="calculator.html">Калькулятор</a></li>
 						<li><a href="partners.html">Партнерам</a></li>
-						<li><a href="">Новости</a></li>
+						<li><a href="news.html">Новости</a></li>
 						<li><a href="faq.html">FAQ</a></li>
-						<li><a href="">Контакты</a></li>
+						<li><a href="contacts.html">Контакты</a></li>
 					</ul>
 				</nav>
 				<img src="scss/images/rus.png" alt="">
@@ -84,19 +84,19 @@
 		<div class="b1_cont">
 			<div class="case case_1">
 				<div class="circle_title">
-					<h2>Депозит <br> “Платина” <br> <span>9 месяцев</span></h2>
+					<h2>Депозит <br> “Серебро” <br> <span>3 месяцев</span></h2>
 				</div>
 				<div class="case_cont">
 					<p>Процент прибыли </p>
-					<p><span>7% в месяц</span></p>
+					<p><span>3% в месяц</span></p>
 				</div>
 				<div class="case_cont">
 					<p>Сумма </p>
-					<p><span>100$ - 500 000$</span></p>
+					<p><span>100$ - 500.000$</span></p>
 				</div>
 				<div class="case_cont">
 					<p>Срок действия Депозита </p>
-					<p><span>270 дней</span></p>
+					<p><span>90 дней</span></p>
 				</div>
 				<div class="case_cont">
 					<p>Возврат тела депозита </p>
@@ -105,19 +105,19 @@
 			</div>
 			<div class="case case_2">
 				<div class="circle_title">
-					<h2>Депозит <br> “Платина” <br> <span>9 месяцев</span></h2>
+					<h2>Депозит <br> “Золото” <br> <span>6 месяцев</span></h2>
 				</div>
 				<div class="case_cont">
 					<p>Процент прибыли </p>
-					<p><span>7% в месяц</span></p>
+					<p><span>5% в месяц</span></p>
 				</div>
 				<div class="case_cont">
 					<p>Сумма </p>
-					<p><span>100$ - 500 000$</span></p>
+					<p><span>100$ - 500.000$</span></p>
 				</div>
 				<div class="case_cont">
 					<p>Срок действия Депозита </p>
-					<p><span>270 дней</span></p>
+					<p><span>180 дней</span></p>
 				</div>
 				<div class="case_cont">
 					<p>Возврат тела депозита </p>
@@ -134,7 +134,7 @@
 				</div>
 				<div class="case_cont">
 					<p>Сумма </p>
-					<p><span>100$ - 500 000$</span></p>
+					<p><span>100$ - 500.000$</span></p>
 				</div>
 				<div class="case_cont">
 					<p>Срок действия Депозита </p>
@@ -147,19 +147,19 @@
 			</div>
 			<div class="case case_4">
 				<div class="circle_title">
-					<h2>Депозит <br> “Платина” <br> <span>9 месяцев</span></h2>
+					<h2>Депозит <br> “Брилиант” <br> <span>12 месяцев</span></h2>
 				</div>
 				<div class="case_cont">
 					<p>Процент прибыли </p>
-					<p><span>7% в месяц</span></p>
+					<p><span>10% в месяц</span></p>
 				</div>
 				<div class="case_cont">
 					<p>Сумма </p>
-					<p><span>100$ - 500 000$</span></p>
+					<p><span>100$ - 500.000$</span></p>
 				</div>
 				<div class="case_cont">
 					<p>Срок действия Депозита </p>
-					<p><span>270 дней</span></p>
+					<p><span>360 дней</span></p>
 				</div>
 				<div class="case_cont">
 					<p>Возврат тела депозита </p>
@@ -168,23 +168,23 @@
 			</div>
 			<div class="case case_5">
 				<div class="circle_title">
-					<h2>Депозит <br> “Платина” <br> <span>9 месяцев</span></h2>
+					<h2>Депозит <br> “Брилиант+” <br> <span>12 месяцев</span></h2>
 				</div>
 				<div class="case_cont">
 					<p>Процент прибыли </p>
-					<p><span>7% в месяц</span></p>
+					<p><span>10% в месяц</span></p>
 				</div>
 				<div class="case_cont">
 					<p>Сумма </p>
-					<p><span>100$ - 500 000$</span></p>
+					<p><span>100$ - 500.000$</span></p>
 				</div>
 				<div class="case_cont">
 					<p>Срок действия Депозита </p>
-					<p><span>270 дней</span></p>
+					<p><span>360 дней</span></p>
 				</div>
 				<div class="case_cont">
 					<p>Возврат тела депозита </p>
-					<p><span>В конце срока</span></p>
+					<p><span>Каждый месяц 1/12 часть</span></p>
 				</div>
 			</div>
 		</div>
