--- a/crypto/partners.html
+++ b/crypto/partners.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" href="scss/style.min.css">
-	<script async src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script async src="js/script.js"></script>
 	<script async src="js/jquery.bxslider.min.js"></script>
 	<link href="lib/jquery.bxslider.css" rel="stylesheet" />
@@ -43,9 +43,9 @@
 						<li><a href="about_us.html">О нас</a></li>
 						<li><a href="calculator.html">Калькулятор</a></li>
 						<li><a href="partners.html">Партнерам</a></li>
-						<li><a href="">Новости</a></li>
+						<li><a href="news.html">Новости</a></li>
 						<li><a href="faq.html">FAQ</a></li>
-						<li><a href="">Контакты</a></li>
+						<li><a href="contacts.html">Контакты</a></li>
 					</ul>
 				</nav>
 				<img src="scss/images/rus.png" alt="">
