--- a/irina_larina/index.html
+++ b/irina_larina/index.html
@@ -35,7 +35,7 @@
 	<section class="b-2">
 		<div class="box-2-1">
 			<h2>Зарегистрируйтесь прямо сейчас и получите <br> совершенно бесплатно</h2>
-			<h3>ТЕСТ “ОПРЕДЕЛЕНИЕ <br>  УРОВНЯ СЧАСТЬЯ”</h3>
+			<h3>ПЕРВОЕ УПРАЖНЕНИЕ, <br>  <span>без которого не обходится <br> ни один сезон "Недели удовольствий"</span></h3>
 			<form action="">
 				<input type="text" placeholder='Ваше имя'><br>
 				<input type="text" placeholder='Ваш номер телефона'><br>
@@ -293,7 +293,7 @@
 и сюрпризов!</p>
 			</div>
 			<div class="b10-video">
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/gJ6tk6yAfMw" frameborder="0" allowfullscreen></iframe>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/gJ6tk6yAfMw?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 			</div>
 			<div class="play-3">
 				<img class='left-b' src="scss/images/left-b.png" alt="">
@@ -323,9 +323,9 @@
 в фейсбук</span></li>
 			</ul>
 			<ul>
-				<li><p>30.08 - 04.09 - 20 евро</p></li>
-				<li><p>05.09 - 10.09 - 25 евро</p></li>
-				<li><p>11.09 - 21.09 - 30 евро</p></li>
+				<li><p>До 10.08 - 21 евро</p></li>
+				<li><p>До 20.08 - 25 евро</p></li>
+				<li><p>До 30.08 - 29 евро</p></li>
 			</ul>
 		</div>
 		<button>Стать счастливой</button>
@@ -346,9 +346,9 @@
 ваши<br> вопросы</span></li>
 			</ul>
 			<ul>
-				<li><p>30.08 - 04.09 - 45 евро</p></li>
-				<li><p>05.09 - 10.09 - 55 евро</p></li>
-				<li><p>11.09 - 21.09 - 65 евро</p></li>
+				<li><p>До 10.08 - 55 евро</p></li>
+				<li><p>До 20.08 - 65 евро</p></li>
+				<li><p>До 30.08 - 75 евро</p></li>
 			</ul>
 		</div>
 		<button>Стать счастливой</button>
@@ -367,13 +367,12 @@
 с персональными <br> ответами на все 
 ваши <br>вопросы</span></li>
 				<li><span class='span1 vt'>+</span><span class='span2'>Поездка на 7 дней <br>
-в Италию на интенсив<br> “Неделя удовольствий<br> PRO”</span></li>
+в Дубай в ноябре <br> на интенсив “Неделя <br> удовольствий”</span></li>
 				<li><span class='span1'>+</span><span class='span2'>Игра кеш-флоу</span></li>
 			</ul>
 			<ul>
-				<li><p>30.08 - 04.09 - 200 евро</p></li>
-				<li><p>05.09 - 10.09 - 300 евро</p></li>
-				<li><p>11.09 - 21.09 - 400 евро</p></li>
+				<li class="center"><span>550 евро - полная стоимость</span></li>
+				<li><p>350 евро - до 5 сентября</p></li>
 			</ul>
 		</div>
 		<button>Стать счастливой</button>
