--- a/mrcleaner/index.html
+++ b/mrcleaner/index.html
@@ -14,6 +14,7 @@
 	<script type="text/javascript" src="slick/slick.min.js"></script>
 </head>
 <body>
+<div class="wrapper-hidden">
 	<div class="comments">
 		<div class="wrap">
 			<p class="comments__title">3,000+ заказов выполненных лучшими профессионалами уборки</p>
@@ -144,5 +145,6 @@
             </form>
 		</div>
 	</div>
+</div>
 </body>
 </html>
