--- a/mrcleaner/job.html
+++ b/mrcleaner/job.html
@@ -11,6 +11,7 @@
 	<script src="js/script.js"></script>
 </head>
 <body>
+<div class="wrapper-hidden">
 	<div class="mob-header"></div>
 	<header class="header fixed clearfix wrap">
 		<div class="logo"><a href=""><img src="img/logo.png" alt="" class="header__logo"><img src="img/logo-mob.png" alt="" class="header__logo_mob"></a></div>
@@ -147,5 +148,6 @@
     </div>
     <div class="overlay"></div>
     <!-- Modal mobile menu end -->
+</div>
 </body>
 </html>
