--- a/mrcleaner/job.html
+++ b/mrcleaner/job.html
@@ -143,8 +143,10 @@
                 </li>
             </ul>
         </div>
-        <button class="modal-form__butt modal-form__butt_a">ЗАКАЗАТЬ УБОРКУ</button>
-        <a href="tel:8 (3822) 977-262" class="modal-form__butt modal-form__butt_b"><img src="img/mob5.png" alt="">8 (3822) 977-262</a>
+        <div class="modal-form__bott">
+            <button class="modal-form__butt modal-form__butt_a">ЗАКАЗАТЬ УБОРКУ</button>
+            <a href="tel:8 (3822) 977-262" class="modal-form__butt modal-form__butt_b"><img src="img/mob5.png" alt="">8 (3822) 977-262</a>
+        </div>
     </div>
     <div class="overlay"></div>
     <!-- Modal mobile menu end -->
